files/spring-boot.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot
  labels:
        app: spring-boot
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spring-boot
  template:
    metadata:
      labels:
        app: spring-boot
    spec:
      containers:
        - name: spring-boot
          image: 'kodekloud/webapp-color:v1'
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: spring-boot
  labels:
    app: spring-boot
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: spring-boot
  type: LoadBalancer
