files/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /main(.*)
        pathType: Prefix
        backend:
          service:
            name: bilvantis-version-1
            port:
              number: 8080
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: spring-boot
            port:
              number: 8080
